# vmaf

./: .cppcheck-suppressions.txt  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .release-please-manifest.json  .semgrep.yml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ffmpeg  Makefile  README.md  SECURITY.md  SUPPORT.md  build  mkdocs.yml  pyproject.toml  release-notes.md  release-please-config.json  renovate.json  unittest
ai/: AGENTS.md  CHANGELOG.md  __init__.py  lpips_export.py  pyproject.toml
ai/configs/: learned_filter_v1_qat.yaml
ai/data/: __init__.py  feature_extractor.py  hardware_caps.csv  netflix_loader.py  phase_f_recipes_calibrated.json  scores.py
ai/scripts/: aggregate_corpora.py  analyze_knob_sweep.py  build_bisect_cache.py  bvi_dvc_to_corpus_jsonl.py  bvi_dvc_to_full_features.py  calibrate_phase_f_recipes.py  chug_extract_features.py  chug_to_corpus_jsonl.py  enrich_k150k_parquet_metadata.py  eval_loso_3arch.py  eval_loso_mlp_small.py  eval_loso_vmaf_tiny_v3.py  eval_loso_vmaf_tiny_v4.py  eval_loso_vmaf_tiny_v5.py  eval_multiseed_v3_v4.py  eval_probabilistic_proxy.py  eval_saliency_per_mb.py  export_ensemble_v2_seeds.py  export_fastdvdnet_pre.py  export_fastdvdnet_pre_placeholder.py  export_tiny_models.py  export_transnet_v2.py  export_transnet_v2_placeholder.py  export_vmaf_tiny_v2.py  export_vmaf_tiny_v3.py  export_vmaf_tiny_v4.py  export_vmaf_tiny_v5.py  extract_full_features.py  extract_k150k_features.py  extract_k150k_features.sh  extract_konvid_frames.py  extract_ugc_features.py  feature_correlation.py  fetch_konvid_1k.py  fetch_youtube_ugc_subset.py  hardware_caps_loader.py  konvid_150k_to_corpus_jsonl.py  konvid_1k_to_corpus_jsonl.py  konvid_to_vmaf_pairs.py  live_vqc_to_corpus_jsonl.py  (+34 more)
ai/src/aiutils/: file_utils.py  jsonl_utils.py  parquet_utils.py  time_utils.py
ai/src/corpus/: __init__.py  base.py
ai/src/vmaf_train/: __init__.py  audit.py  bisect_model_quality.py  cli.py  codec.py  confidence.py  cross_backend.py  datamodule.py  eval.py  features.py  learned_filter_audit.py  op_allowlist.py  profile.py  quantize.py  registry.py  train.py  tune.py  validate_norm.py
ai/testdata/bisect/: README.md  features.parquet
ai/tests/: __init__.py  conftest.py  test_aggregate_corpora.py  test_audit.py  test_bisect_model_quality.py  test_build_bisect_cache.py  test_chug.py  test_codec_aware_fr.py  test_confidence.py  test_corpus_base.py  test_cross_backend.py  test_dataset.py  test_dataset_splits.py  test_e2e_frame_to_score.py  test_enrich_k150k_parquet_metadata.py  test_eval.py  test_eval_metrics.py  test_eval_saliency_per_mb.py  test_export_roundtrip.py  test_extract_k150k_chug_bit_depth.py  test_extract_k150k_features.py  test_extract_k150k_hdr_hfr_options.py  test_extract_k150k_no_ssimulacra2.py  test_extract_k150k_perf.py  test_feature_correlation.py  test_feature_sets.py  test_frame_loader.py  test_hardware_caps.py  test_knob_sweep_analysis.py  test_konvid_150k.py  test_konvid_1k.py  test_konvid_pair_dataset.py  test_learned_filter_audit.py  test_live_vqc.py  test_lsvq.py  test_manifest_scan.py  test_merge_corpora.py  test_netflix_loader.py  test_op_allowlist.py  test_profile.py  (+18 more)
ai/train/: __init__.py  dataset.py  eval.py  konvid_pair_dataset.py  qat.py  train.py  train_combined.py
libvmaf/: AGENTS.md  README.md  meson.build  meson_options.txt
libvmaf/include/libvmaf/: AGENTS.md  dnn.h  feature.h  libvmaf.h  libvmaf_cuda.h  libvmaf_hip.h  libvmaf_mcp.h  libvmaf_metal.h  libvmaf_sycl.h  libvmaf_vulkan.h  macros.h  meson.build  model.h  picture.h  vmaf_assert.h
libvmaf/src/: AGENTS.md  bootstrap_names.h  cpu.c  cpu.h  dict.c  dict.h  fex_ctx_vector.c  fex_ctx_vector.h  framesync.c  framesync.h  gpu_picture_pool.c  gpu_picture_pool.h  libvmaf.c  log.c  mem.c  meson.build  metadata_handler.c  metadata_handler.h  model.c  model.h  opt.c  output.c  output.h  pdjson.c  pdjson.h  picture.c  picture.h  picture_pool.c  picture_pool.h  predict.c  predict.h  read_json_model.c  read_json_model.h  ref.c  ref.h  svm.cpp  svm.h  thread_locale.c  thread_locale.h  thread_pool.c  (+1 more)
libvmaf/src/arm/: AGENTS.md  cpu.c  cpu.h
libvmaf/src/cuda/: AGENTS.md  common.c  common.h  cuda_helper.cuh  dispatch_strategy.c  dispatch_strategy.h  drain_batch.c  drain_batch.h  kernel_template.h  picture_cuda.c  picture_cuda.h  ring_buffer.c
libvmaf/src/dnn/: AGENTS.md  README.md  (+15 more)
libvmaf/subprojects/: vk-mem-alloc.wrap  volk.wrap
libvmaf/test/: AGENTS.md  meson.build  simd_bitexact_test.h  test.c  test.h  test_adm_csf.c  test_adm_cuda.c  test_ansnr_simd.c  test_barten_csf.c  test_cambi.c  test_cambi_simd.c  test_cambi_vulkan.c  test_ciede.c  test_cli_parse.c  test_cli_parse_long_only_args.c  test_context.c  test_cpu.c  test_cuda_buffer_alloc_oom.c  test_cuda_pic_preallocation.c  test_cuda_preallocation_leak.c  test_dict.c  test_dists.c  test_fastdvdnet_pre.c  test_feature.c  test_feature_collector.c  test_feature_extractor.c  test_float_ms_ssim_min_dim.c  test_framesync.c  test_gpu_picture_pool.c  test_hip_smoke.c  test_integer_cambi_sycl.c  test_iqa_convolve.c  test_locale_handling.c  test_log.c  test_lpips.c  test_luminance_tools.c  test_mcp_smoke.c  test_metal_install_header.c  test_metal_smoke.c  test_mirror.py  (+37 more)
libvmaf/tools/: AGENTS.md  cli_parse.c  cli_parse.h  meson.build  spinner.h  vidinput.c  vidinput.h  vmaf.c  vmaf_bench.c  vmaf_per_shot.c  vmaf_roi.c  vmaf_roi_core.h  vmaf_vpl.c  y4m_input.c  yuv_input.c
mcp-server/vmaf-mcp/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
tools/ensemble-training-kit/: 01-prereqs.sh  02-generate-corpus.sh  03-train-loso.sh  04-validate.sh  05-bundle-results.sh  AGENTS.md  README.md  _platform_detect.sh  build-libvmaf-binaries.sh  extract-corpus.sh  make-distribution-tarball.sh  prepare-gdrive-bundle.sh  pyproject.toml  requirements-frozen.txt  run-full-pipeline.sh
tools/vmaf-roi-score/: AGENTS.md  README.md  pyproject.toml  vmaf-roi-score
tools/vmaf-tune/: AGENTS.md  README.md  pyproject.toml  vmaf-tune
(+2764 files in other folders)
