# Centralizes Python linter/formatter config for the fork-added Python tooling
# (ai/, scripts/) and the existing python/ tree. Upstream-authored python/
# tests are formatted but not lint-failed (see [tool.ruff.lint.per-file-ignores]).

[project]
name = "vmaf-fork-tooling"
version = "0.0.0"
description = "Lusoris fork of Netflix/vmaf — Python tooling and scripts"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | build
  | dist
  | subprojects
  | python/test/resource
  | python/vmaf/resource
  | python/vmaf/matlab
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["vmaf", "ai", "vmaf_train", "corpus"]
skip_glob = [
  "build/*",
  "subprojects/*",
  "python/test/resource/*",
  "python/vmaf/resource/*",
  "python/vmaf/matlab/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "build",
  "subprojects",
  "python/test/resource",
  "python/vmaf/resource",
  "python/vmaf/matlab",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pyflakes + pycodestyle
  "I",             # isort
  "B",             # bugbear
  "C4",            # comprehensions
  "PIE",
  "RET",
  "SIM",
  "S",             # bandit (security)
  "PL",            # pylint subset
  "RUF",
]
ignore = [
  "E501",          # line length handled by black
  "PLR0913",       # too-many-arguments — VMAF feature kernels naturally take many
  "S101",          # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
# Upstream Netflix Python is not our style canon. Keep F821 (undefined
# name) and real-bug pyflakes catching defects; silence bugbear /
# security / simplify / style families and the hygiene-only F/E codes
# (unused imports, unused vars, bare except) — those represent style
# drift Netflix owns, not regressions we introduced.
"python/**" = [
    "S", "PL", "B", "C4", "PIE", "RET", "SIM", "RUF", "I001",
    "F401", "F522", "F541", "F841",
    "E402", "E711", "E722", "E731", "E741",
]
# Ad-hoc developer benchmark + one-off comparison scripts. They are
# manually invoked by humans, not shipped as part of libvmaf, so style
# drift is acceptable and the bandit `S` warnings (subprocess,
# try/except pass) are known-and-accepted in a dev context.
"testdata/**" = [
    "S", "PL", "B", "SIM", "RUF", "I001",
    "F401", "F541", "F841",
    "E401", "E402", "E701", "E722", "W291", "W292",
]
# Upstream Netflix dataset / model config scripts. Pure data, not
# business logic — they ship as fixtures and are not in our hot path.
# (Resource tree is also in [tool.ruff] extend-exclude; this per-file
# ignore block stays as a belt-and-suspenders guard for any files that
# slip past the directory exclude.)
"python/vmaf/resource/**" = [
    "S", "PL", "B", "SIM", "RUF", "I001",
    "F401", "F541", "F841",
    "E401", "E402", "E701", "E711", "E722", "W291", "W292",
]

[tool.pytest.ini_options]
testpaths = ["python/test", "ai/tests"]
addopts = "-ra --strict-markers"
markers = [
  "netflix_golden: the 3 Netflix CPU golden test pairs (D24) — must always pass",
  "slow: tests that take more than 30s",
  "gpu: requires a GPU backend (CUDA/SYCL)",
]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["build/", "subprojects/", "python/test/resource/"]

[[tool.mypy.overrides]]
module = "vmaf.*"
ignore_errors = true   # upstream library — not our type stubs to maintain
