# Centralizes Python linter/formatter config for the fork-added Python tooling
# (ai/, scripts/) and the existing python/ tree. Upstream-authored python/
# tests are formatted but not lint-failed (see [tool.ruff.lint.per-file-ignores]).

[project]
name = "vmaf-fork-tooling"
version = "0.0.0"
description = "Lusoris fork of Netflix/vmaf — Python tooling and scripts"
requires-python = ">=3.14.4"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | build
  | dist
  | subprojects
  | python/test/resource
  | python/vmaf/resource
  | python/vmaf/matlab
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["vmaf", "ai", "vmaf_train", "corpus"]
skip_glob = [
  "build/*",
  "subprojects/*",
  "python/test/resource/*",
  "python/vmaf/resource/*",
  "python/vmaf/matlab/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  "build",
  "subprojects",
  "python/test/resource",
  "python/vmaf/resource",
  "python/vmaf/matlab",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pyflakes + pycodestyle
  "I",             # isort
  "B",             # bugbear
  "C4",            # comprehensions
  "PIE",
  "RET",
  "SIM",
  "S",             # bandit (security)
  "PL",            # pylint subset
  "RUF",
]
ignore = [
  "E501",          # line length handled by black
  "PLR0913",       # too-many-arguments — VMAF feature kernels naturally take many
  "S101",          # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
# Upstream Netflix Python is not our style canon. Keep F821 (undefined
# name) and real-bug pyflakes catching defects; silence bugbear /
# security / simplify / style families and the hygiene-only F/E codes
# (unused imports, unused vars, bare except) — those represent style
# drift Netflix owns, not regressions we introduced.
"python/**" = [
    "S", "PL", "B", "C4", "PIE", "RET", "SIM", "RUF", "I001",
    "F401", "F522", "F541", "F841",
    "E402", "E711", "E722", "E731", "E741",
]
# Ad-hoc developer benchmark + one-off comparison scripts. They are
# manually invoked by humans, not shipped as part of libvmaf, so style
# drift is acceptable and the bandit `S` warnings (subprocess,
# try/except pass) are known-and-accepted in a dev context.
"testdata/**" = [
    "S", "PL", "B", "SIM", "RUF", "I001",
    "F401", "F541", "F841",
    "E401", "E402", "E701", "E722", "W291", "W292",
]
# Upstream Netflix dataset / model config scripts. Pure data, not
# business logic — they ship as fixtures and are not in our hot path.
# (Resource tree is also in [tool.ruff] extend-exclude; this per-file
# ignore block stays as a belt-and-suspenders guard for any files that
# slip past the directory exclude.)
"python/vmaf/resource/**" = [
    "S", "PL", "B", "SIM", "RUF", "I001",
    "F401", "F541", "F841",
    "E401", "E402", "E701", "E711", "E722", "W291", "W292",
]

[tool.pytest.ini_options]
testpaths = ["python/test", "ai/tests"]
addopts = "-ra --strict-markers"
markers = [
  "netflix_golden: the 3 Netflix CPU golden test pairs (D24) — must always pass",
  "slow: tests that take more than 30s",
  "gpu: requires a GPU backend (CUDA/SYCL)",
]

[tool.mypy]
python_version = "3.10"
strict = true
# ai/src/ is the vmaf_train package source root. Declaring it via mypy_path lets
# mypy resolve `vmaf_train.*` imports in ai/scripts/ and ai/tests/ without the
# package being pip-installed. ai/src/ itself is excluded from the file-scan list
# to prevent the duplicate-module-name error (mypy would otherwise see each module
# twice: once as "ai.src.vmaf_train.X" from the ai/ argument and once as
# "vmaf_train.X" from mypy_path).
mypy_path = "ai/src"
exclude = [
  "build/",
  "subprojects/",
  "python/test/resource/",
  "ai/src/",
]

[[tool.mypy.overrides]]
module = "vmaf.*"
ignore_errors = true   # upstream library — not our type stubs to maintain

[[tool.mypy.overrides]]
# Suppress "Source file found twice" errors for the ai.src.vmaf_train.* namespace.
# This fires when a script imports vmaf_train.X (resolved via mypy_path → ai/src/)
# and mypy also sees the same file in the ai.src namespace via the legacy ai/ scan.
# The ai.src namespace is never used at runtime; only vmaf_train.* is.
module = ["ai.src.*", "ai.src.vmaf_train.*"]
ignore_errors = true

[[tool.mypy.overrides]]
# Packages that ship no py.typed marker and have no usable third-party stubs.
# Call sites are already type-safe at the boundary (explicit casts / guards).
module = [
  "onnxruntime",
  "onnxruntime.*",
  "lpips",
  "openvino",
  "openvino.*",
  "jsonschema",
  "sklearn",
  "sklearn.*",
  "tensorflow",
  "tensorflow.*",
  "pyarrow",
  "pyarrow.*",
]
ignore_missing_imports = true
