[project]
name = "vmaf-train"
version = "0.1.0"
description = "Train, export and register tiny perceptual-quality models for libvmaf."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "BSD-3-Clause-Plus-Patent" }
authors = [
  { name = "Lusoris", email = "lusoris@pm.me" },
  { name = "Claude (Anthropic)", email = "noreply@anthropic.com" },
]
dependencies = [
  "torch>=2.8,<3.0",
  # Lightning AI un-published the `lightning` distribution from PyPI on
  # 2026-04-30 (yesterday's PR #229 still resolved `lightning-2.6.1`;
  # today the name returns 404). The functionally-identical wheel is
  # published as `pytorch-lightning` (same project, same code, same
  # version 2.6.1), but only exposes the `pytorch_lightning` import
  # namespace — not the `lightning` alias. Code under ai/src/vmaf_train/
  # and ai/scripts/ has been migrated from `import lightning as L` to
  # `import pytorch_lightning as L` to match. Switch back to `lightning`
  # (and revert the import sites) if Lightning AI restores the
  # distribution.
  "pytorch-lightning>=2.5,<3.0",
  "onnx>=1.21.0,<2.0",
  "onnxruntime>=1.20,<2.0",
  "onnxscript>=0.2",
  "numpy>=2.4.4,<3.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=24.0.0",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "pyyaml>=6.0",
  "typer>=0.25.1",
  "rich>=13.7",
  "tqdm>=4.67.3",
]

[project.optional-dependencies]
tune = ["optuna>=4.0", "ray[tune]>=2.55.1"]
gpu  = []
viz  = ["matplotlib>=3.9", "seaborn>=0.13"]
dev  = ["pytest>=9.0.3", "ruff>=0.15.12", "mypy>=1.10"]

[project.scripts]
vmaf-train = "vmaf_train.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vmaf_train"]

[tool.hatch.build.targets.wheel.force-include]
"src/vmaf_train/data/manifests" = "vmaf_train/data/manifests"
"configs" = "vmaf_train/configs"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line length handled by black
  "B008",   # typer.Option in default arg — idiomatic Typer pattern
  "RUF001", # ambiguous unicode — em-dashes in strings are intentional
  "RUF002", # ambiguous unicode in docstrings
  "RUF003", # ambiguous unicode in comments
]
